<resources>
    <string name="app_name">Do-re</string>
    <string name="binding_error">Binding not initialized to reference the view.</string>

    <!-- BottomNavigation -->
    <string name="title_ranking">랭킹</string>
    <string name="title_do_re">두레</string>
    <string name="title_profile">프로필</string>
    <string name="title_help">도와두레</string>
    <string name="title_eat">먹어두레</string>
    <string name="title_lend">빌려두레</string>
    <string name="title_message">메시지</string>
    <string name="title_help_request">도움 요청</string>
    <string name="title_help_do">도와주기</string>

    <!-- SignInFragment -->
    <string name="sign_in_desc_kakao_login">카카오 로그인 버튼</string>
    <string name="sign_in_kakao_login_failure_msg">카카오 로그인에 실패하였습니다.\n다시 시도해주세요.</string>
    <string name="sign_in_complete_login_msg">로그인되었습니다.</string>
    <string name="sign_in_sign_in_failure_msg">로그인에 실패하였습니다.\n다시 시도해주세요.</string>

    <!-- RankingFragment -->
    <string name="ranking_our_ranking">우리 동네 순위</string>
    <string name="ranking_see_around">주변 동네 둘러보기</string>

    <!-- DoReFragment -->
    <string name="do_re_eat_desc">함께 식사할 이웃을 찾아보아요!</string>
    <string name="do_re_help_desc">해결할 문제가 있으세요?\n이웃들의 도움을 받아보아요!</string>
    <string name="do_re_lend_desc">필요한 물건이 있으세요?\n이웃들에게 빌려보아요!</string>

    <!-- HelpActivity -->
    <string name="help_do_help">돕기</string>
    <string name="help_done">신청</string>
    <string name="help_request_help">도움 요청</string>

    <!-- HelpRequestActivity -->
    <string name="help_request_text_hint">내용을 입력해주세요.</string>
    <string name="help_request_done">작성 완료</string>
    <string name="help_request_sum">%d/30</string>
    <string name="help_request_success">도움 요청 완료!</string>
    <string name="help_do_desc">도움을 제안하면 프로필이 전송됩니다.</string>

    <!-- HelpRequestDialog -->
    <string name="help_request_cancel_title">작성을 취소하시겠습니까?</string>
    <string name="help_request_cancel_content">지금까지 작성 된 글은 모두 삭제됩니다.</string>
    <string name="help_request_cancel_delete">삭제</string>

    <!-- HelpRequestFailDialog -->
    <string name="help_request_fail_title">램프가 부족합니다</string>
    <string name="help_request_fail_content">램프가 부족하여 도움을 요청할 수 없습니다.\n램프는 구매 또는 돕기를 통해 획득할 수 있습니다.</string>
    <string name="help_request_fail_buy">구매하기</string>

    <!-- MessageRoomActivity -->
    <!-- MessageRoom_message_help -->
    <string name="message_help_no">거절</string>
    <string name="message_help_yes">수락</string>
    <string name="message_help_result_pending">수락 대기 중입니다.</string>
    <string name="message_help_result_accepted">수락되었습니다.</string>
    <string name="message_help_result_accept">수락했습니다.</string>
    <string name="message_help_user_info">%s, %d세</string>

    <!-- MessageRoom_message_mission -->
    <string name="title_mission">Mission</string>
    <string name="message_mission_lamp_desc">상대방에게 미션을 인증받으면 램프가 지급됩니다.</string>

    <!-- MessageRoom_message_check_help -->
    <string name="message_check_help_title">도움을 잘 받으셨나요?</string>
    <string name="message_check_help_mission">미션</string>
    <string name="check_help_mission_question">%s님이 미션을 수행하셨나요?</string>
    <string name="message_check_help_no">아니오</string>
    <string name="message_check_help_yes">네</string>

    <!-- MessageRoom_message_complete_help -->
    <string name="message_complete_help">도움 해결 완료!</string>

    <!-- ProfileFragment -->
    <string name="profile_distance">이웃과의 거리</string>
    <string name="profile_lamp_count">보유 램프</string>
    <string name="profile_dore_count">내가 참여한 두레</string>
    <string name="profile_badge">획득한 뱃지</string>

    <!-- EatActivity -->
    <string name="eat_together">같이 먹자</string>
</resources>
