<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".presentation.help_request.HelpRequestDialogFragment">

        <ImageButton
            android:id="@+id/btn_help_request_cancel_close"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="6dp"
            android:background="@android:color/transparent"
            android:padding="10dp"
            android:src="@drawable/ic_close_gray"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_help_request_cancel_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="26dp"
            android:fontFamily="@font/spoqa_han_sans_neo_bold"
            android:text="@string/help_request_cancel_title"
            android:textColor="@color/dore_text_black"
            android:textSize="18dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_help_request_cancel_content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/spoqa_han_sans_neo_medium"
            android:text="@string/help_request_cancel_content"
            android:textColor="@color/dore_gray_6"
            android:textSize="14dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_help_request_cancel_title" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_help_request_cancel_delete"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:background="@color/dore_blue"
            android:fontFamily="@font/spoqa_han_sans_neo_medium"
            android:stateListAnimator="@null"
            android:minHeight="0dp"
            android:paddingVertical="10dp"
            android:text="@string/help_request_cancel_delete"
            android:textColor="@color/dore_white"
            android:textSize="14dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_help_request_cancel_content" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
