<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".presentation.ranking.RankingFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:background="@color/dore_black">

            <ImageView
                android:id="@+id/iv_ranking_top"
                android:layout_width="0dp"
                android:layout_height="260dp"
                android:background="@color/dore_gray_4"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_ranking_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="32dp"
                android:fontFamily="@font/montserrat_semibold"
                android:text="@string/title_ranking"
                android:textColor="@color/dore_white"
                android:textSize="22dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_ranking_our"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/spoqa_han_sans_neo_medium"
                android:text="@string/ranking_our_ranking"
                android:textColor="@color/dore_gray_3"
                android:textSize="13dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/iv_ranking_top" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/layout_ranking_our"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="14dp"
                android:background="@drawable/shape_rect_white_10"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_ranking_our">

                <TextView
                    android:id="@+id/tv_ranking_our_rank"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="10dp"
                    android:layout_marginStart="16dp"
                    android:fontFamily="@font/montserrat_medium"
                    android:text="23"
                    android:textColor="@color/black"
                    android:textSize="16dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tv_ranking_up"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="12dp"
                    android:fontFamily="@font/montserrat_medium"
                    android:includeFontPadding="false"
                    android:text="1"
                    android:textColor="@color/dore_yellow"
                    android:textSize="16dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/iv_ranking_our_arrow"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:background="@android:color/transparent"
                    android:src="@drawable/ic_raning_up"
                    app:layout_constraintBottom_toBottomOf="@id/tv_ranking_up"
                    app:layout_constraintEnd_toStartOf="@id/tv_ranking_up"
                    app:layout_constraintTop_toTopOf="@id/tv_ranking_up" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="16dp"
                    android:text="영등포구 문래동"
                    android:textColor="@color/dore_gray_7"
                    android:textSize="14dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/iv_ranking_our_arrow"
                    app:layout_constraintStart_toEndOf="@id/tv_ranking_our_rank"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:id="@+id/tv_ranking_see_around"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="32dp"
                android:fontFamily="@font/spoqa_han_sans_neo_bold"
                android:text="@string/ranking_see_around"
                android:textColor="@color/dore_white"
                android:textSize="18dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/layout_ranking_our" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_ranking_surrounding"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="8dp"
                android:layout_marginTop="20dp"
                android:nestedScrollingEnabled="false"
                app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_ranking_see_around"
                app:spanCount="2"
                tools:listitem="@layout/item_ranking_surrounding" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

</layout>
